--- a/MyTradeMTG/Views/Home/ConfirmRegistration.cshtml
+++ b/MyTradeMTG/Views/Home/ConfirmRegistration.cshtml
@@ -94,7 +94,7 @@
                                                 </div>*@
 
                                                 <div class="field-wrapper">
-                                                    <a href="/Home/Registration" target="_blank" class="btn btn-info foractivation-btn py-2">
+                                                    <a href="/Website/Index" target="_blank" class="btn btn-info foractivation-btn py-2">
                                                         <div class="img-design"><img src="~/assets/img/addnew.png" style="width:50px" /></div> <br />
                                                         <span style="white-space: nowrap">Add New</span>
                                                     </a>
