--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -247,14 +247,21 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="text-success" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"></path></svg>
                                         <span class="ms-2">Change Password </span>
                                     </a>
-                                    <a href="javascript:void(0)" class="dropdown-item ai-icon" data-toggle="modal" data-target="#exampleModal">
-                                        <svg id="icon-inbox" xmlns="http://www.w3.org/2000/svg" class="text-success" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                                        <span class="ms-2">Share Link </span>
-                                    </a>
+                                    @if (Session["Status"].ToString() != "Inactive")
+                                    {
+                                        <a href="javascript:void(0)" class="dropdown-item ai-icon" data-toggle="modal" data-target="#exampleModal">
+                                            <svg id="icon-inbox" xmlns="http://www.w3.org/2000/svg" class="text-success" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                                            <span class="ms-2">Share Link </span>
+                                        </a>
+                                    }
+                                    else
+                                    {
+
+                                    }
                                     @*<a href="~/MyTradeMTGWebsite/index.html" class="dropdown-item ai-icon">
-                                        <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
-                                        <span class="ms-2">Logout </span>
-                                    </a>*@
+                                            <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
+                                            <span class="ms-2">Logout </span>
+                                        </a>*@
 
                                     <a href="/Website/index" class="dropdown-item ai-icon">
                                         <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
@@ -293,46 +300,46 @@
                         </a>
                         <ul aria-expanded="false">
                             @*@if (Session["IdActivated"] != null)
+                                {
+                                    if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                                    {*@
+                            <li><a href="/Wallet/AddWallet">Wallet Request</a></li>
+                            <li><a href="/Wallet/WalletList">Wallet Request List</a></li>
+                            <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
+                            <li><a href="/User/WalletTransfer">Direct Transfer</a></li>
+
+
+
+                            @if (Session["Franchisestatus"].ToString() == "Approved")
                             {
-                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
-                                {*@
-                                    <li><a href="/Wallet/AddWallet">Wallet Request</a></li>
-                                    <li><a href="/Wallet/WalletList">Wallet Request List</a></li>
-                                    <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
-                                    <li><a href="/User/WalletTransfer">Direct Transfer</a></li>
-
-
-
-                                    @if (Session["Franchisestatus"].ToString() == "Approved")
-                                    {
-                                        <li><a href="/User/SaleRequest">Sale Request</a></li>
-                                    }
-                                    else
-                                    {
-                                        <li><a href="/User/MTGPurchaseSell">MTG Sell</a></li>
+                                <li><a href="/User/SaleRequest">Sale Request</a></li>
+                            }
+                            else
+                            {
+                                <li><a href="/User/MTGPurchaseSell">MTG Sell</a></li>
                                         <li><a href="/User/SalesReport">Sell Report</a></li>
-                                    }
-                                @*}
-                            }*@
+                            }
+                            @*}
+                                }*@
                         </ul>
                     </li>
                     @*<li>
-                        <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                            <i class="fas fa-thumbtack"></i>
-                            <span class="nav-text">Pin Management</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            @if (Session["IdActivated"] != null)
-                            {
-                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                            <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
+                                <i class="fas fa-thumbtack"></i>
+                                <span class="nav-text">Pin Management</span>
+                            </a>
+                            <ul aria-expanded="false">
+                                @if (Session["IdActivated"] != null)
                                 {
-                                    <li><a href="/User/EPinRequest">Generate E-Pin</a></li>
+                                    if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                                    {
+                                        <li><a href="/User/EPinRequest">Generate E-Pin</a></li>
+                                    }
                                 }
-                            }
-                            <li><a href="/User/PinList">Pin List</a></li>
-                            <li><a href="/User/PinTransferReport">Transfer Report</a></li>
-                        </ul>
-                    </li>*@
+                                <li><a href="/User/PinList">Pin List</a></li>
+                                <li><a href="/User/PinTransferReport">Transfer Report</a></li>
+                            </ul>
+                        </li>*@
 
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
@@ -341,26 +348,26 @@
                         </a>
                         <ul aria-expanded="false">
                             @*@if (Session["IdActivated"] != null)
-                            {
-                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
                                 {
-
-                                    if (Session["TopUp"] != null)
+                                    if (Convert.ToBoolean(Session["IdActivated"]) == true)
                                     {
-                                        if (Session["TopUp"].ToString() == "False")
-                                        {*@
-                                            <li><a href="/user/Topup"> Topup </a></li>
 
-                                        @*}
-                                    }*@
-                                    <li><a href="/user/TopUpList"> Topup List </a></li>
-                                    <li><a href="/User/PayoutRequest"> Transfer to bank</a></li>
-                                @*}
-                                else
-                                {
+                                        if (Session["TopUp"] != null)
+                                        {
+                                            if (Session["TopUp"].ToString() == "False")
+                                            {*@
+                            <li><a href="/user/Topup"> Topup </a></li>
 
-                                }
-                            }*@
+                            @*}
+                                }*@
+                            <li><a href="/user/TopUpList"> Topup List </a></li>
+                            <li><a href="/User/PayoutRequest"> Transfer to bank</a></li>
+                            @*}
+                                    else
+                                    {
+
+                                    }
+                                }*@
 
                         </ul>
                     </li>
@@ -1154,7 +1161,7 @@
             "stripeClasses": [],
             "lengthMenu": [7, 10, 20, 50],
             "pageLength": 7,
-             order: [[0, 'desc']]
+            order: [[0, 'desc']]
         });
     </script>
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
@@ -2673,43 +2680,43 @@
 
 
     <script>
-    function FranchiseRequest() {
-        debugger;
-        if($("#FirmName").val() == "") {
-            $("#FirmName").addClass('errortextfor');
-            $("#FirmName").focus();
-            return false;
-        }
-        else if($("#Email").val() == "") {
-            $("#Email").addClass('errortextfor');
-            $("#Email").focus();
-            return false;
-        }
-        else if($("#Mobile").val() == "") {
-            $("#Mobile").addClass('errortextfor');
-            $("#Mobile").focus();
-            return false;
-        }
-        else {
-            $.ajax({
-                url: '/User/FranchiseRequest',
-                type: 'Post',
-                dataType: 'json',
-                data: { "FirmName": $("#FirmName").val(), "Email": $("#Email").val(), "Mobile": $("#Mobile").val(), "BankName": $("#BankName").val(), "BranchName": $("#BranchName").val(), "AccountNo": $("#AccountNo").val(), "IFSCCode": $("#IFSCCode").val(), "Address": $("#Address").val() },
-                success: function (data) {
-                    if (data.Result == "yes") {
-                        $("#myModalAddFranchise").modal('show');
-                        alert('Franchise requested submited !!');
-                        window.location.reload();
+        function FranchiseRequest() {
+            debugger;
+            if ($("#FirmName").val() == "") {
+                $("#FirmName").addClass('errortextfor');
+                $("#FirmName").focus();
+                return false;
+            }
+            else if ($("#Email").val() == "") {
+                $("#Email").addClass('errortextfor');
+                $("#Email").focus();
+                return false;
+            }
+            else if ($("#Mobile").val() == "") {
+                $("#Mobile").addClass('errortextfor');
+                $("#Mobile").focus();
+                return false;
+            }
+            else {
+                $.ajax({
+                    url: '/User/FranchiseRequest',
+                    type: 'Post',
+                    dataType: 'json',
+                    data: { "FirmName": $("#FirmName").val(), "Email": $("#Email").val(), "Mobile": $("#Mobile").val(), "BankName": $("#BankName").val(), "BranchName": $("#BranchName").val(), "AccountNo": $("#AccountNo").val(), "IFSCCode": $("#IFSCCode").val(), "Address": $("#Address").val() },
+                    success: function (data) {
+                        if (data.Result == "yes") {
+                            $("#myModalAddFranchise").modal('show');
+                            alert('Franchise requested submited !!');
+                            window.location.reload();
+                        }
+                        else {
+                            alert(data.Result);
+                        }
                     }
-                    else {
-                        alert(data.Result);
-                    }
-                }
-            });
+                });
 
+            }
         }
-    }
 
 
     </script>
@@ -2717,35 +2724,35 @@
 
 
 
-    function onlyAlphabets(e, t) {
-        try {
-            if (window.event) {
-                var charCode = window.event.keyCode;
+        function onlyAlphabets(e, t) {
+            try {
+                if (window.event) {
+                    var charCode = window.event.keyCode;
+                }
+                else if (e) {
+                    var charCode = e.which;
+                }
+                else { return true; }
+                if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123) || (charCode == 32))
+                    return true;
+                else
+                    return false;
             }
-            else if (e) {
-                var charCode = e.which;
+            catch (err) {
+                alert(err.Description);
             }
-            else { return true; }
-            if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123) || (charCode == 32))
-                return true;
-            else
+        }
+
+
+        function isNumberKey(evt) {
+
+            var charCode = (evt.which) ? evt.which : event.keyCode;
+            if (charCode != 46 && charCode > 31
+              && (charCode < 48 || charCode > 57))
                 return false;
+
+            return true;
         }
-        catch (err) {
-            alert(err.Description);
-        }
-    }
-
-
-    function isNumberKey(evt) {
-
-        var charCode = (evt.which) ? evt.which : event.keyCode;
-        if (charCode != 46 && charCode > 31
-          && (charCode < 48 || charCode > 57))
-            return false;
-
-        return true;
-    }
     </script>
     <style>
         .errortextfor {
