--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -582,7 +582,7 @@
                     <div class="col-lg-12 form-group">
                         <input id="phone" type="tel" placeholder="Enter Mobile No."  maxlength = "15" onkeypress = "return isNumberKey(event);">
                         @*<span id="valid-msg" class="hide">Valid</span>*@
-                        <span style="color:red;" id="error-msg" class="hide">Invalid number</span>
+                        @*<span style="color:red;" id="error-msg" class="hide">Invalid number</span>*@
                     </div>
                     <div class="col-lg-12 form-group">
                         @*<input type="email" placeholder="Your Email Address" />*@
@@ -635,47 +635,26 @@
 
         <!--Register Form end-->
 
-
     </div>
 </div>
-
-
 @*<div style="display:none">
 <span id="UserDisplayName">@Session["DisplayName"]</span>
 <span id="UserLoginId" >@Session["LoginId"]</span>
 <span id="UserPassword">@Session["Password"]</span>
 </div>*@
-
-
-
 <div style="display:none">
     <span id="UserDisplayName"></span>
     <span id="UserLoginId"></span>
     <span id="UserPassword"></span>
 </div>
 
-
-<!-- Button to Open the Modal -->
-<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#confirm_registration" style="position: relative;
-    z-index: 999999999;
-}">
-    Open modal
-</a>
-
 <!-- The Modal -->
 <div class="modal fade" id="confirm_registration">
     <div class="modal-dialog">
         <div class="modal-content" style="background:#0f1b39;">
-            <!-- Modal Header -->
-            <div class="modal-header p-2">
-                <a href="/Home/index">
-                   <img src="~/UserPanel/images/logo with bg.gif" class="img-fluid" style="width:12rem" />
-                </a>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-
             <!-- Modal body -->
             <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <div class="row justify-content-center h-100 align-items-center">
                     <div class="col-md-8">
                         <div class="authincation-content">
@@ -684,7 +663,7 @@
                                     <div class="auth-form">
 
                                         <h3 class="thank text-white text-center">Thank You <span id="UserDisplayName1"></span> </h3>
-                                        <h6 class="card-title text-white text-center mt-4">
+                                        <h6 class="card-title text-white text-center mt-3">
                                             For Your Registration. Your Details are as Below <br />
                                             <span class="credential"><span class="cred-head">Login ID : </span> <span class="cred-detail" id="UserLoginId1"></span></span><br />
                                             <span class="credential"><span class="cred-head">Password : </span> <span class="cred-detail" id="UserPassword1"></span></span>
@@ -698,7 +677,7 @@
                                             <span class="credential"><span class="cred-head">Password: </span> <span class="cred-detail">@Session["Password"]</span></span>
 
                                         </h6>*@
-                                        <div class="d-flex justify-content-around mt-5">
+                                        <div class="d-flex justify-content-around mt-1">
                                             @*<div class="field-wrapper">
                                         <a href="/Home/CompleteRegistration" class="mr-2 btn btn-primary chaining-modals foractivation-btn py-2">
                                             <div class="img-design"><img src="~/assets/img/dash.png" style="width:50px" /></div> <br />
@@ -742,7 +721,7 @@
 <style>
     .errortext {
         border: 1px solid red !important;
-        background-color: #fff0f0 !important;
+        background-color: transparent !important;
     }
 </style>
 
